# Mitra

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.chainlit/: config.toml
.files/4cecaad6-d89e-4c69-9c93-58cc82eb1612/: c7f818c9-e7d5-4a97-8cc7-bb4cbc17c318
.files/581775b6-28fa-4577-bb93-19338bbc9c75/: 2b59519b-0b42-4be9-a11d-ca508e50b3bf
.files/bbe2ccca-3da2-4c19-b4b8-80130192c5b3/: ba1258b6-6597-46f9-9fa9-ab268f096d0e
notebooks/: test.ipynb
public/: test.js  test1.css
src/chains/: character_chain.py  enhanced_prompt_chain.py  router_chain.py
src/core/: settings.py
src/graph/: edge.py  graph.py  state.py
src/graph/nodes/: audio_node.py  conversation_node.py  image_node.py  memory_extraction_node.py  memory_injection_node.py  router_node.py  summary_node.py
src/interface/: app.py
src/interface/chainlit/: app.py
src/interface/whatsapp/: webhook_endpoint.py  whatsapp_response.py
src/llm/: llm_provider.py
src/models/: analyze_memory_model.py
src/modules/image/: image_to_text.py  text_to_image.py
src/modules/memory/: memory_manager.py  vector_store.py
src/modules/speech/: speech_to_text.py  text_to_speech.py
src/prompts/: analyze_memory_prompt.py  character_prompt.py  image_enhanced_prompt.py  router_prompt.py
